--- a/assets/css/landing-page.css
+++ b/assets/css/landing-page.css
@@ -330,7 +330,7 @@ a:focus, a:active {
   color: #888888;
 }
 .btn-neutral.btn-fill, .btn-neutral.btn-fill:hover, .btn-neutral.btn-fill:focus {
-  color: #888888;
+  color: #4d4d4d;
 }
 .btn-neutral.btn-simple:active, .btn-neutral.btn-simple.active {
   background-color: transparent;
@@ -465,19 +465,19 @@ a:focus, a:active {
 
 .navbar-transparent .navbar-brand, [class*="navbar-ct"] .navbar-brand {
   color: white;
-  opacity: 0.9;
-  filter: alpha(opacity=90);
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 .navbar-transparent .navbar-brand:focus, .navbar-transparent .navbar-brand:hover, [class*="navbar-ct"] .navbar-brand:focus, [class*="navbar-ct"] .navbar-brand:hover {
   background-color: transparent;
-  opacity: 1;
-  filter: alpha(opacity=100);
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 .navbar-transparent .navbar-nav > li > a, [class*="navbar-ct"] .navbar-nav > li > a {
-  color: white;
+  color: #4d4d4d;
   border-color: white;
-  opacity: 0.8;
-  filter: alpha(opacity=80);
+/*  opacity: 0.5;
+  filter: alpha(opacity=50);*/
 }
 .navbar-transparent .navbar-nav > .active > a,
 .navbar-transparent .navbar-nav > .active > a:hover,
@@ -490,7 +490,7 @@ a:focus, a:active {
 [class*="navbar-ct"] .navbar-nav > li > a:focus {
   background-color: transparent;
   border-radius: 3px;
-  color: white;
+  color: #4d4d4d;
   opacity: 1;
   filter: alpha(opacity=100);
 }
@@ -551,12 +551,12 @@ a:focus, a:active {
   font-weight: normal;
 }
 .footer nav > ul a:not(.btn) {
-  color: #9a9a9a;
+  color: #4d4d4d;
   display: block;
   margin-bottom: 3px;
 }
 .footer nav > ul a:not(.btn):hover, .footer nav > ul a:not(.btn):focus {
-  color: #777777;
+  color: #4d4d4d;
 }
 .footer .social-area {
   padding: 15px 0;
@@ -838,14 +838,14 @@ a:focus, a:active {
 .logo-container .logo{
     overflow: hidden;
     border-radius: 50%;
-    border: 1px solid #333333;
+    border: none;
     width: 50px; 
     float: left;
 }
 
 .logo-container .brand{
     font-size: 18px;
-    color: #FFFFFF;
+    color: #4d4d4d;
     line-height: 20px;
     float: left;
     margin-left: 10px;
@@ -989,8 +989,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
   z-index: 1;
   width: 100%;
   height: 100%;
+  background-color: #ffbb28;
 }
 .landing-page .parallax .parallax-background img{
+  display: none;
   width: 100%;
   height: auto;
   position: relative;
@@ -1029,7 +1031,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 
 .landing-page .parallax .description{
   margin-top: 200px;
-  color: white;
+  color: #4d4d4d;
   padding: 5px;
 }
 
@@ -1038,7 +1040,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 }
 
 .landing-page .parallax .description h2{
-  text-shadow: 0 1px 5px rgba(0,0,0,0.2);
+  /* text-shadow: 0 1px 5px rgba(0,0,0,0.2); */
   font-weight: 200;
   font-size: 40px;
 }
@@ -1091,7 +1093,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
   }
    .landing-page .logos li{
     display: inline-block;
-    margin: 0 17px;
+    margin: 17px 17px;
    }
 
    .landing-page .section-presentation {
@@ -1657,7 +1659,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
     text-align: center;
   }
   .landing-page .navbar-top{
-    background: rgba(0, 0, 0, 0.75);
+    /*background: rgba(0, 0, 0, 0.75);*/
   }
   .landing-page .parallax {
     height: 550px;
@@ -1666,6 +1668,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
     width: auto;
     height: 100%;
   }
+  .landing-page .parallax .description h2 {
+    color: #ffbb28;}
   .landing-page .parallax .description{
     margin-top: 65px;  }
   .landing-page .parallax .buttons{
